# pytest-tia

./: README.md  pyproject.toml
.github/workflows/: publish.yml
benchmark/: RESULTS-boltons.md  RESULTS.md  skiprate.py
examples/calc/: calc.py  tax.json  test_calc.py
examples/ci/: github-actions.yml
tests/: test_core.py  test_mutation_guarantee.py
tia/: __init__.py  cli.py  diff.py  plugin.py  remotestore.py  report.py  select.py  semantic.py  store.py
